# Alice

./: .gitignore  CMakeLists.txt  README.md  TOPLAY.txt
alice/include/: npc.h
alice/src/: main.cpp
